--- a/styles/webflow-layout.css
+++ b/styles/webflow-layout.css
@@ -378,3 +378,8 @@ main.main {
     border-right: 4px solid #32E0C4;
     box-shadow: 2px 0 8px 0 rgba(0, 0, 0, 0.3);
 }
+
+body section {
+    display: flex !important;
+    flex-direction: row !important;
+}
