--- a/styles/webflow-layout.css
+++ b/styles/webflow-layout.css
@@ -1,8 +1,8 @@
 body {
   font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 14px;
-   line-height: 1.5rem;
- font-size: 20px;
+  line-height: 1.5rem;
+  font-size: 20px;
 }
 
 .body {
@@ -32,16 +32,16 @@ h2 {font-size: 1.9em;font-weight: bold; margin-top:64px; color:#222}
 h3 {font-size: 1.5em;font-weight: bold; margin-top:48px; color:#222}
 h4 {font-size: 1.3em;font-weight: bold; color:#333}
 p, li {
-    padding-bottom: 4px;
-    padding-top: 4px;
-    box-sizing: inherit;
-    font-family: "Work Sans", sans-serif;
-    font-size: 20px;
-    font-weight: 500;
-    font-variant: common-ligatures;
-    line-height: 1.8;
-    text-size-adjust: inherit;
-    color:#222
+  padding-bottom: 4px;
+  padding-top: 4px;
+  box-sizing: inherit;
+  font-family: "Work Sans", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  font-variant: common-ligatures;
+  line-height: 1.8;
+  text-size-adjust: inherit;
+  color:#222
 }
 
 p,a, li, h1, h2,h3,h4,h5,h6 {
@@ -148,10 +148,10 @@ img {width:100%; height:auto; margin-top:16px; margin-bottom:48px; border-radius
 main.main .main {max-width:800px;}
 
 blockquote {
-    margin: 0;
-    padding-left: 3em;
-    border-left: 0.5em rgb(222, 223, 255) solid;
-    margin:16px 0;
+  margin: 0;
+  padding-left: 3em;
+  border-left: 0.5em rgb(222, 223, 255) solid;
+  margin:16px 0;
 }
 
 /* -----------------------*/
@@ -229,9 +229,9 @@ blockquote {
   font-size: 20px;
 }
 main.parent-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .section {
@@ -278,14 +278,14 @@ main.parent-main {
 
 @media screen and (min-width: 767px) {
   .sidebar {left: 0 !important;}
-  .main {width: calc(100% - 250px); }
+  .main {width: calc(100% ); }
 }
 /*
 */
 @media screen and (min-width: 991px) {
-  .parent-main {width: calc(100% - 250px);  padding-left: 16vw !important; padding-right: 4vw;}
+  .parent-main {width: calc(100% );  padding-left: 20vw !important; padding-right: 20vw;}
 }
-  @media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .sidebar {
     position: fixed;
     top:0;
@@ -294,9 +294,9 @@ main.parent-main {
     box-shadow: 3px 3px 8px -2px rgba(0, 0, 0, 0.3);
     padding-top:96px;
   }
-/*
-  .parent-main {max-width: calc(100% - 32px);}
-  */
+  /*
+    .parent-main {max-width: calc(100% - 32px);}
+    */
   .main {
     left: 16px;
     /*
@@ -349,37 +349,37 @@ main.parent-main {
 }
 
 .sidebar#sidebar a {
-    color: #ddd !important;
-    transition: all 0.3s ease-out;
+  color: #ddd !important;
+  transition: all 0.3s ease-out;
 }
 
 .sidebar#sidebar a:hover {
-    color: #fff !important;
-    /*
-    color: #5221c4;
-    */
+  color: #fff !important;
+  /*
+  color: #5221c4;
+  */
 }
 
 body section {
-    background-color: #fcfcfc;
+  background-color: #fcfcfc;
 }
 text.node-label {
-    fill:#fff !important;
+  fill:#fff !important;
 }
 
 #graph-box text {
-    color: #fff !important;
+  color: #fff !important;
 }
 main.main {
-    font-size: 16px !important;
-    line-height: 1.5rem !important;
+  font-size: 16px !important;
+  line-height: 1.5rem !important;
 }
 .sidebar#sidebar {
-    border-right: 4px solid #32E0C4;
-    box-shadow: 2px 0 8px 0 rgba(0, 0, 0, 0.3);
+  border-right: 4px solid #32E0C4;
+  box-shadow: 2px 0 8px 0 rgba(0, 0, 0, 0.3);
 }
 
 body section {
-    display: flex !important;
-    flex-direction: row !important;
+  display: flex !important;
+  flex-direction: row !important;
 }
