Put Side bar to both Index and post pages Make nav bar appear on the left side.

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,10 @@ a:hover {
     color: var(--text-accent-hover);
 }
 
+.container {
+    display: flex;
+    justify-content: center;
+}
 
 .markdown-rendered {
     font-size: 18px;
@@ -14,10 +18,13 @@ a:hover {
     background-color: var(--background-primary);
     color: var(--text-normal);
     font-family:var(--default-font);
-    margin: auto;
     padding: 20px;
 }
 
+.nav-bar {
+    width: 400px;
+    padding: 20px;
+}
 :root {
     --default-font: 'Inter', sans-serif;
 }
