Update image styling

--- a/styles/style.css
+++ b/styles/style.css
@@ -147,6 +147,13 @@ a:hover {
     --highlight-mix-blend-mode: darken;
 }
 
+.markdown-rendered img:not([width]),
+.markdown-rendered audio,
+.markdown-rendered video {
+    max-width: 100%;
+    outline: none;
+}
+
 .markdown-rendered h1,
 .markdown-rendered h2,
 .markdown-rendered h3,
