--- a/styles/style.css
+++ b/styles/style.css
@@ -87,7 +87,7 @@ a:hover {
     background-color: var(--background-primary);
     color: var(--text-normal);
     font-family:var(--default-font);
-    padding: 20px;
+    padding: 15px 30px;
 }
 
 .nav-bar {
@@ -184,7 +184,7 @@ a:hover {
     display: block;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1400px) {
     .right-bar-container {
         display: none;
     }
