--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19,7 +19,7 @@ a:hover {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    position: relative;
+    position: fixed;
     flex-direction: row;
 }
 
@@ -95,9 +95,12 @@ a:hover {
 /* Foooter section END */
 
 .markdown-rendered {
+    position: relative;
+    overflow: auto;
     font-size: 18px;
     line-height: 1.6em;
-    width: 740px;
+    width: 100%;
+    height: 100%;
     background-color: var(--background-primary);
     color: var(--text-normal);
     font-family: var(--default-font);
@@ -114,16 +117,17 @@ a:hover {
 }
 
 .nav-bar {
+    position: relative;
+    height: 100%;
+    scrollbar-gutter: stable;
     width: 300px;
     flex: 0 0 300px;
-    position: relative;
     display: flex;
     background-color: var(--background-primary-alt);
     border-right: 1px solid var(--background-secondary-alt);
     font-family: var(--default-font);
     font-size: 14px;
     line-height: 1.6;
-    min-height: 0;
     padding-top: 20px;
     flex-direction: column;
 }
@@ -216,7 +220,7 @@ a:hover {
 
 .right-bar-container {
     display: block;
-    padding: 0em 1em;
+    padding: 0 3em;
 }
 
 footer {
