fix: graph padding

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -256,7 +256,7 @@ a:hover {
 
 .right-bar-container {
     display: block;
-    padding: 0 3em;
+    padding: 32px 3em;
     background-color: var(--background-primary);
     color: var(--text-muted)
 }
